--- a/backend/app.yaml
+++ b/backend/app.yaml
@@ -1,4 +1,4 @@
-application: stock-watchlist
+application: stocks-wl
 version: 1
 runtime: python27
 api_version: 1
@@ -24,6 +24,7 @@ handlers:
 - url: .*
   static_files: dist/index.html
   upload: dist/index.html
+  secure: always
 
 builtins:
 - remote_api: on
