--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,9 +20,9 @@
   "devDependencies": {
     "broccoli-asset-rev": "^1.0.0",
     "broccoli-ember-hbs-template-compiler": "^1.6.1",
-    "broccoli-merge-trees": "^0.2.1",
-    "broccoli-static-compiler": "^0.2.1",
-    "ember-cli": "0.1.4",
+    "broccoli-merge-trees": "~0.2.1",
+    "broccoli-static-compiler": "~0.2.1",
+    "ember-cli": "~0.1.4",
     "ember-cli-accounting": "0.0.3",
     "ember-cli-content-security-policy": "0.3.0",
     "ember-cli-dependency-checker": "0.0.6",
